--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <!--info-->
-    <section class="info">
+    <section class="info1">
         <div class="" container>
             <div class="info1_area">
                 <img src="img/pic1.png" alt="pic info 1">
@@ -52,9 +52,10 @@
     </section>
     <!--info2-->
     <section class="info2">
-        <div class="container">
+        <div class=""container>
             <div class="info2_area">
                 <img src="Img/pic2.png" alt="pic info 2">
+                <div class="info2_text">
                 <h1>Look forward to the future</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore laborum illo, porro officiis
                     necessitatibus pariatur, ad quaerat doloremque temporibus eaque incidunt laudantium ipsum iusto
